--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,8 @@ browser=chrome
 QA_url=https://demo.opencart.com/admin/
 QA_openChart_username=demo
 QA_openChart_password=demo
+BankManager_url=https://www.globalsqa.com/angularJs-protractor/BankingProject/#/login
+Customer_name=Ahmet
+Customer_lastName=Baldir
+Customer_zipCode=60123
+CustomerAdded_successfulMessage=Customer added successfully with customer id
